[package]
name = "easy-tensorrt-tch250"
version = "0.2.0"
edition = "2021"
authors = ["Burton Qin <bobbqq@163.com>"]
description = "Rust wrapper for NVIDIA TensorRT"
repository = "https://github.com/BurtonQin/easy-tensorrt"
# readme = "README.md"
keywords = ["tensorrt", "nvidia", "cuda", "ffi"]
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "easy_tensorrt_tch250"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.18.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
cudarc = { version = "0.16.3", features = ["driver", "cuda-version-from-build-system", "dynamic-linking", "std"], default-features=false }
easy-tensorrt-core = { version = "0.2.0", path = "../../easy-tensorrt-core" }
thiserror = "1"

tch = { package = "tch", version = "0.18.1", features = ["python-extension"] }
pyo3-tch = "0.18.1"

[build-dependencies]
pyo3-build-config = "0.21"

